FlatpakPermission: Add back no-args default constructor

Older toolchain such as Kubuntu requires default constructor to use this
class with QVector. Do not use this constructor manually.

BUG: 467399